maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:31: error: type mismatch;
 found   : Unit
 required: Boolean
      if (!aMurOuest(x+1,y)){
      ^ShortestPathMaze:30: error: type mismatch;
 found   : Unit
 required: Boolean
    if (x != getMondeHauteur()-1){
    ^ShortestPathMaze:13: error: type mismatch;
 found   : Unit
 required: Boolean
    if (!aMurNord(x,y)){
    ^